--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   transform-style: preserve-3d;
   perspective: 10000px;
   transition: all 2s ease;
-  animation: spin 5s linear infinite;
+  animation: spin 5s linear infinite forwards;
 }
 @keyframes spin {
   from {
@@ -26,6 +26,7 @@ body {
   text-align: center;
   line-height: 5rem;
   background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
   transform: translateZ(2.5rem);
 }
 .back {
@@ -36,6 +37,7 @@ body {
   text-align: center;
   line-height: 5rem;
   background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
   transform: rotateY(180deg) translateZ(2.5rem);
 }
 .right {
@@ -46,6 +48,7 @@ body {
   text-align: center;
   line-height: 5rem;
   background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
   transform: rotateY(90deg) translateZ(2.5rem);
 }
 .left {
@@ -56,6 +59,7 @@ body {
   text-align: center;
   line-height: 5rem;
   background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
   transform: rotateY(-90deg) translateZ(2.5rem);
 }
 .top {
@@ -66,6 +70,7 @@ body {
   text-align: center;
   line-height: 5rem;
   background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
   transform: rotateX(90deg) translateZ(2.5rem);
 }
 .bottom {
@@ -76,6 +81,7 @@ body {
   text-align: center;
   line-height: 5rem;
   background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
   transform: rotateX(-90deg) translateZ(2.5rem);
 }
 .shadow {
@@ -87,6 +93,7 @@ body {
   text-align: center;
   line-height: 5rem;
   background: rgb(0, 245, 255);
+  transition: all 0.5s ease;
   transform: rotateX(-90deg) translateZ(3.5rem);
   animation: sp 4s linear infinite;
 }
@@ -100,4 +107,92 @@ body {
   100% {
     filter: blur(25px);
   }
+}
+.op {
+  height: 5rem;
+  width: 5rem;
+  margin: 15rem auto;
+  transform-style: preserve-3d;
+  perspective: 10000px;
+  transition: all 2s ease;
+  animation: spin 2.5s linear infinite forwards;
+}
+.op1 {
+  position: absolute;
+  height: 4.99rem;
+  width: 5rem;
+  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
+  text-align: center;
+  line-height: 5rem;
+  background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
+  transform: translateZ(5.5rem);
+}
+.op2 {
+  position: absolute;
+  height: 5rem;
+  width: 5rem;
+  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
+  text-align: center;
+  line-height: 5rem;
+  background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
+  transform: rotateY(180deg) translateZ(5.5rem);
+}
+.op3 {
+  position: absolute;
+  height: 5rem;
+  width: 5rem;
+  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
+  text-align: center;
+  line-height: 5rem;
+  background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
+  transform: rotateY(90deg) translateZ(5.5rem);
+}
+.op4 {
+  position: absolute;
+  height: 5rem;
+  width: 5rem;
+  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
+  text-align: center;
+  line-height: 5rem;
+  background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
+  transform: rotateY(-90deg) translateZ(5.5rem);
+}
+.op5 {
+  position: absolute;
+  height: 5rem;
+  width: 5rem;
+  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
+  text-align: center;
+  line-height: 5rem;
+  background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
+  transform: rotateX(90deg) translateZ(5.5rem);
+}
+.op6 {
+  position: absolute;
+  height: 5rem;
+  width: 5rem;
+  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
+  text-align: center;
+  line-height: 5rem;
+  background: rgb(0, 190, 200, .5);
+  transition: all 0.5s ease;
+  transform: rotateX(-90deg) translateZ(5.5rem);
+}
+.op7 {
+  position: absolute;
+  height: 5rem;
+  width: 5rem;
+  color: black;
+  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
+  text-align: center;
+  line-height: 5rem;
+  background: rgb(0, 245, 255);
+  transition: all 0.5s ease;
+  transform: rotateX(-90deg) translateZ(6.5rem);
+  animation: sp 4s linear infinite;
 }
