--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
 body {
   background: black;
 }
+.btn {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  height: 50px;
+  width: 100px;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 50px;
+  background: rgb(0, 190, 200);
+  transition: all 0.2s ease;
+}
+.btn:hover {
+  box-shadow: 0 0 10px rgb(0, 245, 255);
+  transform: scale(1.2);
+}
+.btn:active {
+  transform: scale(0.8);
+}
 .cube {
   height: 5rem;
   width: 5rem;
@@ -109,90 +129,26 @@ body {
   }
 }
 .op {
-  height: 5rem;
-  width: 5rem;
-  margin: 15rem auto;
-  transform-style: preserve-3d;
-  perspective: 10000px;
-  transition: all 2s ease;
   animation: spin 2.5s linear infinite forwards;
 }
 .op1 {
-  position: absolute;
-  height: 4.99rem;
-  width: 5rem;
-  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
-  text-align: center;
-  line-height: 5rem;
-  background: rgb(0, 190, 200, .5);
-  transition: all 0.5s ease;
   transform: translateZ(5.5rem);
 }
 .op2 {
-  position: absolute;
-  height: 5rem;
-  width: 5rem;
-  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
-  text-align: center;
-  line-height: 5rem;
-  background: rgb(0, 190, 200, .5);
-  transition: all 0.5s ease;
   transform: rotateY(180deg) translateZ(5.5rem);
 }
 .op3 {
-  position: absolute;
-  height: 5rem;
-  width: 5rem;
-  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
-  text-align: center;
-  line-height: 5rem;
-  background: rgb(0, 190, 200, .5);
-  transition: all 0.5s ease;
   transform: rotateY(90deg) translateZ(5.5rem);
 }
 .op4 {
-  position: absolute;
-  height: 5rem;
-  width: 5rem;
-  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
-  text-align: center;
-  line-height: 5rem;
-  background: rgb(0, 190, 200, .5);
-  transition: all 0.5s ease;
   transform: rotateY(-90deg) translateZ(5.5rem);
 }
 .op5 {
-  position: absolute;
-  height: 5rem;
-  width: 5rem;
-  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
-  text-align: center;
-  line-height: 5rem;
-  background: rgb(0, 190, 200, .5);
-  transition: all 0.5s ease;
   transform: rotateX(90deg) translateZ(5.5rem);
 }
 .op6 {
-  position: absolute;
-  height: 5rem;
-  width: 5rem;
-  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
-  text-align: center;
-  line-height: 5rem;
-  background: rgb(0, 190, 200, .5);
-  transition: all 0.5s ease;
   transform: rotateX(-90deg) translateZ(5.5rem);
 }
 .op7 {
-  position: absolute;
-  height: 5rem;
-  width: 5rem;
-  color: black;
-  box-shadow: inset 0 0 15px 5px rgb(0, 245, 255);
-  text-align: center;
-  line-height: 5rem;
-  background: rgb(0, 245, 255);
-  transition: all 0.5s ease;
   transform: rotateX(-90deg) translateZ(6.5rem);
-  animation: sp 4s linear infinite;
 }
